# Dashboard_AuvoTasks

./: .gitignore  config.json  main.py  pyproject.toml  setup.py
controller/: CSVDataLoader.py  Dashboard.py
data/: Tasks.csv
