[tool.poetry]
name = "auvo-dashboard"
version = "0.1.0"
description = ""
authors = ["Fabio Ferretto <fabioandradeferretto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
plotly = "^5.18.0"
pandas = "^2.1.4"
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
